# minimal-ide

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fsops.rs  git.rs  main.rs  pty.rs  search.rs  watcher.rs
src/components/: AgentDock.css  AgentDock.tsx  ContextMenu.css  ContextMenu.tsx  DiffViewer.tsx  Dock.css  Dock.tsx  Editor.tsx  EditorArea.css  EditorArea.tsx  EditorSearch.css  EditorSearch.tsx  FileExplorer.css  FileExplorer.tsx  GitGraph.css  GitGraph.tsx  Panel.css  Panel.tsx  QuickOpen.css  QuickOpen.tsx  Resizer.tsx  SearchPanel.css  SearchPanel.tsx  SourceControl.css  SourceControl.tsx  StatusBar.css  StatusBar.tsx  TaskPicker.css  TaskPicker.tsx  TerminalPanel.css  TerminalPanel.tsx  Titlebar.css  Titlebar.tsx  icons.tsx
src/lib/: agentSessions.ts  clipboard.ts  dockTree.ts  fuzzy.ts  graphLayout.ts  ipc.ts  path.ts  projectColors.ts  projectNames.ts  status.ts  taskRunner.ts  tasks.ts  termFileDrop.ts  termSession.ts  termSessions.ts  terminalActivity.ts  workspaceSessions.ts  zoom.ts
src/stores/: agentTerminals.ts  editor.ts  repo.ts  search.ts  terminal.ts  ui.ts  workspaces.ts
src/styles/: app.css  theme.css
