[package]
name = "minimal-ide"
version = "0.1.0"
description = "A minimal, fast IDE: git, terminals, diffs"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.21"
ignore = "0.4"
portable-pty = "0.9"
notify = "8"
regex = "1"
base64 = "0.22"
parking_lot = "0.12"
libc = "0.2"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
# keep dependencies optimized in dev so the editor/terminal stay snappy
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
